--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<script src="./node_modules/jquery/dist/jquery.js"></script>
+	<script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
 </head>
 
